# voynich

./: '  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
fixtures/: bad_config.toml  config.toml
src/: app.rs  app_context.rs  chat.rs  commands.rs  config.rs  connection.rs  control_connection.rs  crypto.rs  engine.rs  input.rs  lib.rs  logger.rs  main.rs  onion_service.rs  onion_service_data.rs  root.rs  theme.rs  torrc.rs  ui.rs  util.rs
src/import_keys/: main.rs  tor.rs
src/import_keys/tor/: onion_service.rs  torrc.rs
src/import_onion_service/: main.rs
src/parse_onion_service/: main.rs  onion_service.rs
src/trithemius-term/: app.rs  app_context.rs  input.rs  main.rs  root.rs  theme.rs  widgets.rs
src/trithemius-term/input/: allow_connection_input.rs  chat_input.rs  command_input.rs
src/trithemius-term/widgets/: chat_input.rs  chat_panel.rs  chat_tabs.rs  command_popup.rs  system_messages_panel.rs
src/voynich-term/: README.md  app.rs  cli.rs  input.rs  main.rs  root.rs
src/voynich-term/widgets/: chat_input.rs  command_popup.rs
