[package]
name = "trithemius"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trithemius-term"
path = "src/trithemius-term/main.rs"

[[bin]]
name = "import-keys"
path = "src/import_keys/main.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
better-panic = "0.3.0"
chacha20poly1305 = "0.10.1"
chrono = "0.4.31"
circular-queue = "0.2.6"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
derive_builder = "0.12.0"
ed25519-dalek = { version = "2.0.0", features = ["pkcs8"] }
futures = "0.3.28"
futures-lite = "1.13.0"
hex = "0.4.3"
hkdf = "0.12.3"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
ratatui = "0.24.0"
regex = "1.10.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.108"
sha2 = "0.10.8"
sudo = "0.6.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["cbor"] }
tokio-socks = "0.5.1"
tokio-util = { version = "0.7.9", features = ["codec"] }
tor-client-lib = { git = "https://github.com/jacklund/tor-client-lib.git", version = "0.1.0" }
unicode-width = "0.1.11"
x25519-dalek = { version = "2.0.0", features = ["getrandom"] }
