[package]
name = "voynich"
version = "0.1.1"
description = "Library for creating anonymous, end-to-end encrypted and authenticated chat applications"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "voynich"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["clock", "serde"] }
circular-queue = "0.2.6"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
hkdf = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.21"
rand = "0.8.5"
regex = "1.10.4"
rpassword = "7.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_cbor = "0.11.2"
serde_with = { version = "3.8.1", features = ["base64", "hex"] }
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tokio-socks = "0.5.1"
tokio-util = { version = "0.7.11", features = ["codec"] }
toml = "0.8.14"
tor-client-lib = "0.2.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
